[metadata]
name = saltext.sap_nwabap
description = SaltStack extension for SAP NetWeaver AS ABAP
long_description = file: README.md
long_description_content_type = text/markdown
author = 'Benjamin Wegener, Alexander Wilke'
keywords = salt-extension
url = https://github.com/SAPUCC/saltext-sap_nwabap
project_urls =
    Source=https://github.com/SAPUCC/saltext-sap_nwabap
    Tracker=https://github.com/SAPUCC/saltext-sap_nwabap/issues
license = GPLv3
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Intended Audience :: Developers

platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.6
setup_requires =
  wheel
  setuptools>=50.3.2
  setuptools-declarative-requirements
install_requires =
  salt>=3003
  pyrfc

[options.packages.find]
where = src
exclude =
    tests


[options.entry_points]
salt.loader=
  saltext.sap_nwabap = saltext.sap_nwabap

[options.extras_require]
  tests =
    pytest==6.2.4
    pytest-salt-factories==0.906.0
  dev =
    nox==2021.6.12
    pre-commit==2.13.0
    pylint
    six
    SaltPyLint
  docs =
    furo
    sphinx
    sphinx-copybutton
    sphinx-prompt
    sphinxcontrib-spelling
    importlib_metadata; python_version < "3.8"
  docsauto =
    sphinx-autobuild

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[sdist]
owner = root
group = root
